Fixing a dark mode bug

--- a/css/app.scss
+++ b/css/app.scss
@@ -144,7 +144,7 @@ a:active {
     border: none !important;
   }
 
-  blockquote {
+  blockquote, pre {
     background-color: $gray-800 !important;
   }
 }
